@@ -874,9 +874,21 @@ ZEND_FUNCTION(get_class_methods)
 		       instanceof_function(EG(scope), mptr->common.scope TSRMLS_CC))
 		   || ((mptr->common.fn_flags & ZEND_ACC_PRIVATE) &&
 		       EG(scope) == mptr->common.scope)))) {
-			MAKE_STD_ZVAL(method_name);
-			ZVAL_STRING(method_name, mptr->common.function_name, 1);
-			zend_hash_next_index_insert(return_value->value.ht, &method_name, sizeof(zval *), NULL);
+			char *key;
+			uint key_len;
+			ulong num_index;
+			uint len = strlen(mptr->common.function_name);
+
+			/* Do not display old-style inherited constructors */
+			if ((mptr->common.fn_flags & ZEND_ACC_CTOR) == 0 ||
+			    mptr->common.scope == ce ||
+			    zend_hash_get_current_key_ex(&ce->function_table, &key, &key_len, &num_index, 0, &pos) != HASH_KEY_IS_STRING ||
+			    zend_binary_strcasecmp(key, key_len-1, mptr->common.function_name, len) == 0) {
+
+				MAKE_STD_ZVAL(method_name);
+				ZVAL_STRINGL(method_name, mptr->common.function_name, len, 1);
+				zend_hash_next_index_insert(return_value->value.ht, &method_name, sizeof(zval *), NULL);
+			}
 		}
 		zend_hash_move_forward_ex(&ce->function_table, &pos);
 	}
